--- a/_includes/search.html
+++ b/_includes/search.html
@@ -2,7 +2,7 @@
 <input type="text" id="search-input" placeholder="{{ site.data.main.searchbox }}">
 <ul id="search-results"></ul>
 </div>
-<script src="{{ site.baseurl }}/search.js" type="text/javascript"></script>
+<script src="{{ site.url }}/search.js" type="text/javascript"></script>
 <script>
 SimpleJekyllSearch({
   searchInput: document.getElementById('search-input'),
