--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
-    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+    <link rel="stylesheet" type="text/css" href="{{ site.url }}/style.css" />
+    <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.url }}/feed.xml" />
     <link rel="icon" type="image/png" href="{{ site.avatar }}">
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
@@ -21,16 +21,16 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
+          <a href="{{ site.url }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
 
           <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+            <h1 class="site-name"><a href="{{ site.url }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
           </div>
 
           <nav>
           {% for item in site.data.main.nav %}
-          <a href="{{ site.baseurl }}{{ item.url }}"
+          <a href="{{ site.url }}{{ item.url }}"
           {% if item.url == page.url %}
             class="bold"
           {% else %}
@@ -63,7 +63,7 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-          &copy; {{ site.time | date: '%Y' }} <a href="{{ site.baseurl }}/">{{ site.name }}</a>
+          &copy; {{ site.time | date: '%Y' }} <a href="{{ site.url }}/">{{ site.name }}</a>
           {{ site.data.main.nav_footer }}
         </footer>
       </div>
