--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,24 +3,28 @@ layout: default
 ---
 
 <article class="post">
-  <h1>{{ page.title }}</h1>
 
-  <div class="entry">
-    {{ content }}
-  </div>
+<h1>{{ page.title }}</h1>
 
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-    ({% for tag in page.tags %}{{ comma }}<a href="/tag/{{ tag }}">{{ tag }}</a>{% assign comma = "," %}{% endfor %})
-  </div>
+<div class="entry">
+{{ content }}
+</div>
+
+<div class="date">
+Written on {{ page.date | date: "%B %e, %Y" }}
+({% for tag in page.tags %}{{ comma }}<a href="/tag/{{ tag }}">{{ tag }}</a>{% assign comma = "," %}{% endfor %})
+
+{% if page.tags == nil %}NO TAGS IN THE HOUSE{% endif %}
+</div>
 
 </article>
 
+
 <div class="nav_post">
-  {% if page.previous.url %}
-    <a href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
-  {% endif %}
-  {% if page.next.url %}
-    <a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
-  {% endif %}
+{% if page.previous.url %}
+<a href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
+{% endif %}
+{% if page.next.url %}
+<a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
+{% endif %}
 </div>
