--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,9 +12,7 @@ layout: default
 
 <div class="date">
 Written on {{ page.date | date: "%B %e, %Y" }}
-({% for tag in page.tags %}{{ comma }}<a href="/tag/{{ tag }}">{{ tag }}</a>{% assign comma = "," %}{% endfor %})
-
-{% if page.tags.size>0 %}TAGS IN THE HOUSE{% endif %}
+{% if page.tags.size>0 %}({% for tag in page.tags %}{{ comma }}<a href="/tag/{{ tag }}">{{ tag }}</a>{% assign comma = "," %}{% endfor %}){% endif %}
 </div>
 
 </article>
