--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,8 @@ Written on {{ page.date | date: "%B %e, %Y" }}
 {% if page.tags.size>0 %}({% for tag in page.tags %}{{ comma }}<a href="/tag/{{ tag }}">{{ tag }}</a>{% assign comma = "," %}{% endfor %}){% endif %}
 </div>
 
+
+{{ page.categories }}
 </article>
 
 
