--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -1,6 +1,12 @@
 <nav>
-  {% for item in site.data.main.tags %}
+{% if page.lang==en %}
+  {% assign thistag = 'tags' %}
+{% else %}
+  {% capture thistag %}tags_{{ page.lang }}{% endcapture %}
+{% endif %}
+
+  {% for item in site.data.main.[thistag] %}
   <a href="{{ site.url }}{{ item.url }}" title="{{ item.subtitle }}" {% if item.url == page.url %}class="bold"{% assign tag_name = item.name %}{% assign tag_title = item.title %}{% assign tag_subtitle = item.subtitle %}{% endif %}>{{ item.title }}</a>
   {% endfor %}
 </nav>
-<br clear="all" />
+<br>
