--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,8 @@ layout: default
 
 <div class="date">
 Written on {{ page.date | date: "%B %e, %Y" }}
-{% if page.tags.size>0 %}({% for tag in page.tags %}{{ comma }}<a href="/tag/{{ tag }}">{{ tag }}</a>{% assign comma = "," %}{% endfor %}){% endif %}
+{% if page.lang=='en' %}{% assign tagpath = '' %}{% else %}{% capture tagpath %}/{{ page.lang }}{% endcapture %}{% endif %}
+{% if page.tags.size>0 %}({% for tag in page.tags %}{{ comma }}<a href="{{ tagpath }}/tag/{{ tag }}">{{ tag }}</a>{% assign comma = "," %}{% endfor %}){% endif %}
 </div>
 
 </article>
