--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -1,8 +1,4 @@
-{% if page.lang=='en' %}
-  {% assign thistag = 'tags' %}
-{% else %}
-  {% capture thistag %}tags_{{ page.lang }}{% endcapture %}
-{% endif %}
+{% capture thistag %}tags{{ langvar }}{% endcapture %}
 <nav>
 {% for item in site.data.main.[thistag] %}
 <a href="{{ site.url }}{{ item.url }}" title="{{ item.subtitle }}" {% if item.url == page.url %}class="bold"{% assign tag_name = item.name %}{% assign tag_title = item.title %}{% assign tag_subtitle = item.subtitle %}{% endif %}>{{ item.title }}</a>
