--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ layout: default
 </div>
 
 <div class="date">
-Written on {{ page.date | date: "%B %e, %Y" }}
+Written ({{ langpath }}) on {{ page.date | date: "%B %e, %Y" }}
 {% if page.tags.size>0 %}({% for tag in page.tags %}{{ comma }}<a href="{{ langpath }}/tag/{{ tag }}">{{ tag }}</a>{% assign comma = "," %}{% endfor %}){% endif %}
 </div>
 
