--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
 
 <div id="main" role="main" class="container">
 {{ content }}
-C{{ page.categories }}CL{{ page.lang }}LP{{ langpath }}PV{{ langvar }}V
+C{{ page.categories }}CL{{ page.lang }}LP{{ langpath }}PV{{ langvar }}VT{{ testvar }}T
 </div>
 
 
