--- a/_includes/lang.html
+++ b/_includes/lang.html
@@ -1,1 +1,1 @@
-{% if page.lang=='en' %}{% assign langpath = '' %}{% assign langvar = '' %}{% else %}{% capture langpath %}/{{ page.lang }}{% endcapture %}{% capture langvar %}_{{ page.lang }}{% endcapture %}{% endif %}{% assign testvar = "testval" %}
+{% if page.lang=='en' %}{% assign langpath = '' %}{% assign langvar = '' %}{% else %}{% capture langpath %}/{{ page.lang }}{% endcapture %}{% capture langvar %}_{{ page.lang }}{% endcapture %}{% endif %}
