--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -1,8 +1,8 @@
 ---
 layout: null
 ---
-[
-  {% for post in site.posts %}
+{% include lang.html %}[
+  {% for post in site.categories.[langvar] %}
     {
       "title"    : "{{ post.title | escape }}",
       "tags"     : "{{ post.tags | join: ', ' }}",
@@ -14,6 +14,7 @@ layout: null
   ,
   {% for page in site.pages %}
    {
+    {% if page.lang == langvar %}
      {% if page.title != nil %}
         "title"    : "{{ page.title | escape }}",
         "tags"     : "{{ page.tags | join: ', ' }}",
@@ -21,6 +22,7 @@ layout: null
         "date"     : "{{ page.date }}",
         "desc"     : ""
      {% endif %}
+    {% endif %}
    } {% unless forloop.last %},{% endunless %}
   {% endfor %}
   {% comment %}
