--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -2,7 +2,7 @@
 layout: null
 ---
 {% include lang.html %}[
-  {% for post in site.categories.[langvar] %}
+  {% for post in site.categories.[langlang] %}
     {
       "title"    : "{{ post.title | escape }}",
       "tags"     : "{{ post.tags | join: ', ' }}",
@@ -14,7 +14,7 @@ layout: null
   ,
   {% for page in site.pages %}
    {
-    {% if page.lang == langvar %}
+    {% if page.lang == langlang %}
      {% if page.title != nil %}
         "title"    : "{{ page.title | escape }}",
         "tags"     : "{{ page.tags | join: ', ' }}",
@@ -26,7 +26,7 @@ layout: null
    } {% unless forloop.last %},{% endunless %}
   {% endfor %}
   {% comment %}
-  - This needs to be enabled when the book is there, because now it isn't
+  - This needs to be enabled when the book is there, because now it isn't - and I assume we'll add different books depending on the language, right?
   ,
   {% for page in site.passion %}
    {
