--- a/_includes/lang.months.html
+++ b/_includes/lang.months.html
@@ -1,3 +1,5 @@
+{% capture langmth %}week{{ langvar }}{% endcapture %}
+{% assign langweeks = site.data.main.[langmth] | split: ", " %}
 {% capture langmth %}month{{ langvar }}{% endcapture %}
 {% assign langmonth = site.data.main.[langmth] | split: ", " %}
 {% capture langmth %}months{{ langvar }}{% endcapture %}
