--- a/_includes/lang.months.html
+++ b/_includes/lang.months.html
@@ -1,7 +1,9 @@
 {% if langvar==nil %}{% include lang.html %}{% endif %}
-{% capture langmth %}week{{ langvar }}{% endcapture %}
-{% assign langweeks = site.data.main.[langmth] | split: ", " %}
-{% capture langmth %}month{{ langvar }}{% endcapture %}
-{% assign langmonth = site.data.main.[langmth] | split: ", " %}
-{% capture langmth %}months{{ langvar }}{% endcapture %}
-{% assign langmonths = site.data.main.[langmth] | split: ", " %}
+{% if langlang!='en' %}
+  {% capture langmth %}week{{ langvar }}{% endcapture %}
+  {% assign langweeks = site.data.main.[langmth] | split: ", " %}
+  {% capture langmth %}month{{ langvar }}{% endcapture %}
+  {% assign langmonth = site.data.main.[langmth] | split: ", " %}
+  {% capture langmth %}months{{ langvar }}{% endcapture %}
+  {% assign langmonths = site.data.main.[langmth] | split: ", " %}
+{% endif %}
