--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,18 +13,8 @@ layout: default
 </div>
 
 <div class="date">
-Written on {{ page.date | date: "%B %e, %Y" }}
+{% include lang.date.html date=post.date %}
 {% if page.tags.size>0 %}({% for tag in page.tags %}{{ comma }}<a href="{{ langpath }}/tag/{{ tag }}">{{ tag }}</a>{% assign comma = "," %}{% endfor %}){% endif %}
 </div>
 
 </article>
-
-
-<div class="nav_post">
-{% if page.previous.url %}
-<a href="{{page.previous.url}}">&laquo; {{page.previous.title}}</a>
-{% endif %}
-{% if page.next.url %}
-<a class="next" href="{{page.next.url}}">{{page.next.title}} &raquo;</a>
-{% endif %}
-</div>
