--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ layout: default
 </div>
 
 <div class="date">
-{% include lang.date.html date=post.date %}
+{% include lang.date.html date=page.date %}
 {% if page.tags.size>0 %}({% for tag in page.tags %}{{ comma }}<a href="{{ langpath }}/tag/{{ tag }}">{{ tag }}</a>{% assign comma = "," %}{% endfor %}){% endif %}
 </div>
 
