--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -2,7 +2,7 @@
 {% capture thistag %}tags{{ langvar }}{% endcapture %}
 <nav>
 {% for item in site.data.main.[thistag] %}
-<a href="{{ site.url }}{{ item.url }}" title="{{ item.subtitle }}" {% if item.url == page.url %}class="bold"{% assign tag_name = item.name %}{% assign tag_title = item.title %}{% assign tag_subtitle = item.subtitle %}{% endif %}>{{ item.title }}</a>
+<a href="{{ site.url }}{{ item.url }}" title="{{ item.subtitle }}" {% if item.url == page.url %}class="bold"{% assign tag_name = item.name %}{% assign tag_title = item.title %}{% assign tag_subtitle = item.subtitle %}{% endif %}>{{ item.emoji }}{{ item.title }}</a>
 {% endfor %}
 </nav>
 <br>
