--- a/_includes/lang.tags.html
+++ b/_includes/lang.tags.html
@@ -1,11 +1,11 @@
 {% if include.tags.size>0 %}
   {% if langvar==nil %}{% include lang.html %}{% endif %}
   {% capture taglist %}tags{{ langvar }}{% endcapture %}
-  {% for tag in include.tags %}{{ comma }}
+  {% for tag in include.tags %}
     {% for item in site.data.main.[taglist] %}
       {% if tag==item.name %}
         {{ comma }}<a href="{{ item.link }}">{{ item.emoj }}{{ item.titl }}</a>{% assign comma = "," %}
-      {% endif $}
-    {% endfor %}  
+      {% endif %}
+    {% endfor %}
   {% endfor %}
 {% endif %}
