--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -9,7 +9,7 @@ layout: default
 {{ tag_subtitle | markdownify }}
 
 <div class="posts">
-{% for post in site.tags[tag_name] limit:1 %}
+{% for post in site.tags[tag_name] %}
 <div class="post">
 	<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
 	<div class="date">
@@ -17,19 +17,6 @@ layout: default
 	</div>
 	<div class="entry">
 	{{ post.excerpt }}
-	</div>
-</div>
-{% endfor %}
-</div>
-
-<h3>{{ site.data.main.past }}</h3>
-
-<div class="posts">
-{% for post in site.tags[tag_name] offset:1 %}
-<div class="post">
-	<h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
-	<div class="date">
-	{{ post.date | date: "%B %e, %Y" }}
 	</div>
 </div>
 {% endfor %}
