Updating post list

--- a/_includes/posts.html
+++ b/_includes/posts.html
@@ -1,13 +1,22 @@
+{% comment %}This can be used without limit, or with limit, or with offset:
+{% include posts.html posts=site.categories.en limit=1 %}
+{% include posts.html posts=site.categories.en offset=1 limit=2 %}
+In here we create our own index (and not rely on the forloop.index, because we have to rule out the blog posts which are in each language and the same category - like webinars in en/es/pl - they belong to the same category
+{% endcomment %}
+
 {% if langlang==nil %}{% include lang.html %}{% endif %}
 {% if include.offset!=nil %}
   {% assign include_limit = include.limit | plus: include.offset %}
 {% else %}
   {% assign include_limit = include.limit %}
 {% endif %}
+{% assign langindex = 0 %}
 <div class="posts">
 {% for post in include.posts %}
+  {% if post.lang!=langlang %}{% continue %}{% endif %}
+  {% assign langindex = langindex | plus:1 %}
   {% if include.offset!=nil %}
-    {% if forloop.index0 < include.offset %}{% continue %}{% endif %}
+    {% if langindex <= include.offset %}{% continue %}{% endif %}
   {% endif %}
   <div class="post">
     <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
@@ -16,6 +25,6 @@
     {{ post.excerpt }}
     </div>
   </div>
-  {% if forloop.index==include_limit %}{% break %}{% endif %}
+  {% if langindex==include_limit %}{% break %}{% endif %}
 {% endfor %}
 </div>
