--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -8,16 +8,4 @@ layout: default
 
 {{ tag_subtitle | markdownify }}
 
-<div class="posts">
-{% for post in site.tags[tag_name] %}
-<div class="post">
-	<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-	<div class="date">
-	{{ post.date | date: "%B %e, %Y" }}
-	</div>
-	<div class="entry">
-	{{ post.excerpt }}
-	</div>
-</div>
-{% endfor %}
-</div>
+{% include posts.html posts=site.tags[tag_name] %}
