--- a/_layouts/atom.html
+++ b/_layouts/atom.html
@@ -1,17 +1,19 @@
 ---
 layout: nil
 ---
-{% include lang.html %}{% capture atomtitle %}title{{ langvar }}{% endcapture %}{% capture atomname %}name{{ langvar }}{% endcapture %}<?xml version="1.0" encoding="utf-8"?>
+{% include lang.html %}{% capture pagetitle %}title{{ langvar }}{% endcapture %}{% capture pagedescr %}descr{{ langvar }}{% endcapture %}{% capture pagename %}name{{ langvar }}{% endcapture %}{% capture pagelocale %}locale{{ langvar }}{% endcapture %}<?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
-    <title type="text" xml:lang="en">{{ site.data.main.[atomtitle] }}</title>
+    <title>{{ site.data.main.[pagetitle] }}</title>
     <link type="application/atom+xml" href="{{ site.url }}{{ langpath }}/atom.xml" rel="self"/>
     <link type="text" href="{{ site.url }}{{ langpath }}/" rel="alternate"/>
     <updated>{{ site.time | date_to_xmlschema }}</updated>
     <id>{{ site.url }}{{ langpath }}/</id>
     <author>
-        <name>{{ site.data.main.[atomname] }}</name>
+        <name>{{ site.data.main.[pagename] }}</name>
     </author>
-    <rights>Copyright (c) 2008-{{ site.time | date: '%Y' }} {{ site.data.main.[atomname] }}</rights>
+    <icon>{{ site.avatar }}</icon>
+    <subtitle>{{ pagedescr }}</subtitle>
+    <rights>Copyright (c) 2008-{{ site.time | date: '%Y' }} {{ site.data.main.[pagename] }}</rights>
     {% for post in site.categories.[page.lang] limit:20 %}
     <entry xml:lang="{{ page.lang }}">
         <title>{{ post.title }}</title>
