--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html><head>
 {% include lang.html %}{% capture pagetitle %}title{{ langvar }}{% endcapture %}{% capture pagedescr %}descr{{ langvar }}{% endcapture %}{% capture pagename %}name{{ langvar }}{% endcapture %}{% capture pagelocale %}locale{{ langvar }}{% endcapture %}
 
-<title>{% if page.title %}{{ page.title }} – {% endif %}{{ pagetitle }}</title>
+<title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.data.main.[pagetitle] }}</title>
 
 <meta charset="utf-8" />
 <meta content='text/html; charset=utf-8' http-equiv='Content-Type'>
@@ -19,9 +19,9 @@
 <meta property="og:description" content="{{ page.excerpt | strip_html }}" />
 <meta property="twitter:description" content="{{ page.excerpt | strip_html }}" />
 {% else %}
-<meta name="description" content="{{ pagedescr }}">
-<meta property="og:description" content="{{ pagedescr }}" />
-<meta property="twitter:description" content="{{ pagedescr }}" />
+<meta name="description" content="{{ site.data.main.[pagedescr] }}">
+<meta property="og:description" content="{{ site.data.main.[pagedescr] }}" />
+<meta property="twitter:description" content="{{ site.data.main.[pagedescr] }}" />
 {% endif %}
 {% if page.img %}
 <meta name="twitter:image" content="{{ site.url }}/img/{{ page.img }}" />
@@ -36,9 +36,9 @@
 <meta name="twitter:image" content="{{ site.url }}/img/michael.team.jpg" />
 <meta property="og:image" content="{{ site.url }}/img/michael.team.jpg" />
 {% endif %}
-<meta name="author" content="{{ pagename }}" />
+<meta name="author" content="{{ site.data.main.[pagename] }}" />
 <meta property="og:url" content="{{ site.url }}{{ page.url }}/" />
-<meta property="og:locale" content="{{ pagelocale }}" />
+<meta property="og:locale" content="{{ site.data.main.[pagelocale] }}" />
 <meta property="og:type" content="article" />
 <meta property="og:site_name" content="{{ site.name }}" />
 <meta name="twitter:site" content="@MSliwinski"/>
@@ -83,7 +83,7 @@ C{{ page.categories }}CL{{ page.lang }}LP{{ langpath }}PV{{ langvar }}VT{{ testv
 <div class="wrapper-footer"><div class="container">
 
 <footer class="footer">
-&copy; {{ site.time | date: '%Y' }} <a href="{{ site.url }}/">{{ pagename }}</a>
+&copy; {{ site.time | date: '%Y' }} <a href="{{ site.url }}/">{{ site.data.main.[pagename] }}</a>
 </footer>
 
 </div></div>
