--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,9 +19,9 @@
 <meta property="og:description" content="{{ page.excerpt | strip_html }}" />
 <meta property="twitter:description" content="{{ page.excerpt | strip_html }}" />
 {% else %}
-<meta name="description" content="{{ site.data.main.[pagedescr] }}">
-<meta property="og:description" content="{{ site.data.main.[pagedescr] }}" />
-<meta property="twitter:description" content="{{ site.data.main.[pagedescr] }}" />
+<meta name="description" content="{{ site.data.main.[pagedescr] | markdownify | strip_html }}">
+<meta property="og:description" content="{{ site.data.main.[pagedescr] | markdownify | strip_html }}" />
+<meta property="twitter:description" content="{{ site.data.main.[pagedescr] | markdownify | strip_html }}" />
 {% endif %}
 {% if page.img %}
 <meta name="twitter:image" content="{{ site.url }}/img/{{ page.img }}" />
@@ -48,7 +48,7 @@
 <![endif]-->
 
 <link rel="stylesheet" type="text/css" href="{{ site.url }}/style.css" />
-<link rel="alternate" type="application/rss+xml" title="{{ pagetitle }}" href="{{ site.url }}{{ langpath }}/atom.xml" />
+<link rel="alternate" type="application/rss+xml" title="{{ site.data.main.[pagetitle] }}" href="{{ site.url }}{{ langpath }}/atom.xml" />
 <link rel="icon" type="image/png" href="{{ site.avatar }}">
 
 </head>
@@ -61,7 +61,7 @@
 
 <div class="site-info">
 	<h1 class="site-name"><a href="{{ site.url }}/">{{ site.name }}</a></h1>
-	<p class="site-description">{{ site.description }}</p>
+	<p class="site-description">{{ site.data.main.[pagedescr] }}</p>
 </div>
 
 <nav>
