--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@
 
 <div class="site-info">
 	<h1 class="site-name"><a href="{{ site.url }}/">{{ site.name }}</a></h1>
-	<p class="site-description">{{ site.data.main.[pagedescr] }}</p>
+	<p class="site-description">{{ site.data.main.[pagedescr] | markdownify }}</p>
 </div>
 
 <nav>
