--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,10 @@
 
 <nav>
 {% for item in site.data.main.nav %}
-<a href="{{ site.url }}{{ item.url }}"{% if item.url == page.url %} class="bold"{% else %}{% capture navlang %}/{{ page.lang }}/{% endcapture %}{% if item.url contains navlang %} class="bold"{% endif %}{% endif %}>{{ item.title }}</a>
+<a href="{{ site.url }}{{ item.url }}"
+{% if item.url == '/' %}{% if page.lang=='en' %} class="bold"{% endif %}
+{% else %}{% capture navlang %}/{{ page.lang }}/{% endcapture %}
+{% if item.url contains navlang %} class="bold"{% endif %}{% endif %}>{{ item.title }}</a>
 {% endfor %}
 </nav>
 
