--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
 <meta property="og:image" content="{{ site.url }}/img/michael.team.jpg" />
 {% endif %}
 <meta name="author" content="{{ site.data.main.[pagename] }}" />
-<meta property="og:url" content="{{ site.url }}{{ page.url }}/" />
+<meta property="og:url" content="{{ site.url }}{{ page.url }}" />
 <meta property="og:locale" content="{{ site.data.main.[pagelocale] }}" />
 <meta property="og:type" content="article" />
 <meta property="og:site_name" content="{{ site.name }}" />
