--- a/_layouts/searchposts.html
+++ b/_layouts/searchposts.html
@@ -7,7 +7,7 @@ layout: null
       "title"    : "{{ post.title | escape }}",
       "tags"     : "{{ post.tags | join: ', ' }}",
       "url"      : "{{ site.url }}{{ post.url }}",
-      "date"     : "{{ post.date }}",
+      "date"     : "{{ post.date }}"
     } {% unless forloop.last %},{% endunless %}
   {% endfor %}
 ]
