--- a/_layouts/searchposts.html
+++ b/_layouts/searchposts.html
@@ -10,7 +10,7 @@ layout: null
       "tags"     : "{{ post.tags | join: ', ' }}",
       "url"      : "{{ post.url }}",
       "date"     : "{{ post.date }}"
-      {% comment %}We can add here later descriptions (excerpts), tag names or tag icons (or put tag data in a different JSON) and post.img (main images of posts{% endcomment %}
+      {% comment %}We can add here later descriptions (excerpts), tag names or tag icons (or put tag data in a different JSON) and post.img (main images of posts){% endcomment %}
     }
     {% assign comma = "," %}
   {% endfor %}
