--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -16,10 +16,8 @@ $lighterGray: #f6f6f6;
 $white: #fff;
 
 // Font stacks
-$helvetica: Helvetica, Arial, sans-serif;
-$helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$georgia: Georgia, serif;
-
+$font: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Verdana", sans-serif;
+$fontserif: Georgia, Cambria, "Palatino Linotype", "Book Antiqua", Palatino, "Times New Roman", Times, serif;
 // Mobile breakpoints
 @mixin mobile {
   @media screen and (max-width: 640px) {
