--- a/style.scss
+++ b/style.scss
@@ -74,6 +74,7 @@ h4 {
 
 p {
   margin: 1em 0;
+  line-height: 1.3em;
 }
 
 a {
@@ -389,21 +390,18 @@ nav {
 
 .post {
   blockquote {
-    margin: 1.8em .8em;
-    border-left: 2px solid $gray;
+    margin: 1em;
+    border: 2px solid $gray;
     padding: 0.1em 1em;
     color: $gray;
-    font-size: 22px;
+    font-family: $fontserif;
     font-style: italic;
-  }
-
-  .comments {
-    margin-top: 10px;
+    transform: rotate(-2deg);
   }
 
   .read-more {
     text-transform: uppercase;
-    font-size: 15px;
+    font-size: 1.2em;
   }
 }
 
