--- a/style.scss
+++ b/style.scss
@@ -38,6 +38,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   color: $darkerGray;
   font-weight: bold;
+  margin: 0.5em 0;
 
   @include dark-mode {
     color: $lighterGray;
